<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutMovie"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rounded_image"
        android:outlineProvider="background"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_hint_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/nbold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/txt_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nregular"
                android:text="@string/release_date"
                android:textColor="@color/light_white"
                android:textSize="12sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:text="@string/rating"
            android:fontFamily="@font/nbold"
            app:drawableEndCompat="@drawable/ic_star_rate"
            app:drawableTint="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nregular"
        android:maxLines="2"
        android:text="@string/txt_hint_desc"
        android:textColor="@color/light_white"
        android:textSize="16sp"
        tools:ignore="TextContrastCheck" />
</LinearLayout>