<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ProfileActivity"
    android:background="@color/purple_500">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/txt_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:fontFamily="@font/nbold" />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="15dp">

            <TextView
                android:id="@+id/txt_greeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_greeting_user"
                android:textSize="36sp"
                android:textColor="@color/white"
                android:fontFamily="@font/nbold"/>

            <TextView
                android:id="@+id/txt_greeting_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_user_desc"
                android:textSize="24sp"
                android:textColor="@color/light_white"
                android:fontFamily="@font/nregular"/>

            <Button
                android:id="@+id/btn_signout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:layout_marginTop="128dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/magenta"
                android:text="@string/sign_out"
                android:fontFamily="@font/nbold"
                app:cornerRadius="25dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>